--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Memory Game</title>
 </head>
 <body>
-  
+  <div id="container">
+    <title>
+      <h1 id="title">testing</h1>
+    </title>
+    <div id="squares">
+      <div id="row-1">
+        <div id="square-1">
+          
+        </div>
+        <div id="square-2">
+
+        </div>
+      </div>
+      <div id="row-2">
+        <div id="square-3">
+          
+        </div>
+        <div id="square-4">
+
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
