--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,29 +8,25 @@
   <link rel="stylesheet" href="./styles/style.css">
   <title>Memory Game</title>
 </head>
+
 <body>
   <div id="container">
-    <title>
-      <h1 id="title">testing</h1>
-    </title>
+    <div id="title">
+      <h1>Press Any Key To Start</h1>
+    </div>
     <div id="squares">
       <div id="row-1">
-        <div id="square-1">
-          
-        </div>
-        <div id="square-2">
-
-        </div>
+        <div id="square-1"></div>
+        <div class="space"></div>
+        <div id="square-2"></div>
       </div>
       <div id="row-2">
-        <div id="square-3">
-          
-        </div>
-        <div id="square-4">
-
-        </div>
+        <div id="square-3"></div>
+        <div class="space"></div>
+        <div id="square-4"></div>
       </div>
     </div>
   </div>
 </body>
+
 </html>
