--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/styles.css">
   <title>Memory Game</title>
 </head>
 
@@ -15,18 +15,20 @@
       <h1>Press Any Key To Start</h1>
     </div>
     <div id="squares">
-      <div id="row-1">
-        <div id="square-1"></div>
+      <div id="first_row">
+        <div id="green_square"></div>
         <div class="space"></div>
-        <div id="square-2"></div>
+        <div id="red_square"></div>
       </div>
-      <div id="row-2">
-        <div id="square-3"></div>
+      <div id="second_row">
+        <div id="yellow_square"></div>
         <div class="space"></div>
-        <div id="square-4"></div>
+        <div id="blue_square"></div>
       </div>
     </div>
   </div>
+
+  <script src="./script.js"></script>
 </body>
 
 </html>
