Adding the compare feature

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Memory Game</title>
 </head>
 
-<body>
+<body id="body">
   <div id="container">
     <div id="title">
       <h1>Press Any Key To Start</h1>
